Finish rough landing page

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -3,8 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <title>Company</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div class="container">
+
+    <nav>
+      <h1>Profin&ampTrade</h1>
+    </nav>
+
+    <div class="img-container">
+      <img src="./img/h02.jpg" alt="">
+    </div>
+
+    <div class="about">
+
+      <div class="box-container">
+
+        <div class="info-box">
+          <img src="./img/m01.jpg" alt="">
+          <p class="description">
+            Обработка на годишни заплати, данъчни
+          </p>
+        </div>
+
+        <div class="info-box">
+          <img src="./img/m01.jpg" alt="">
+          <p class="description">
+            представителство по системата интрастат; годишно приключване, съставяне на годишни отчети и годишни данъчни декларации;
+          </p>
+        </div>
+
+        <div class="info-box">
+          <img src="./img/m01.jpg" alt="">
+          <p class="description">
+            регистрации и пререгистрации на фирми, публикуване на годишни финансови отчети; административни услуги.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+
+    <h2 class="get-in-touch">Свържете се с нас</h2>
+    <hr>
+    <div class="contact">
+      <div class="map">
+        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="600" height="440" src="https://maps.google.com/maps?hl=en&q=гео милев 37&ie=UTF8&t=m&z=13&iwloc=B&output=embed"><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="http://googlemapsgenerator.com/">Google maps generator</a></small></div><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="https:/www.googlemapsgenerator.com/">generate Google Maps</a></small></div></iframe>
+      </div>
+      <div class="address">
+        <h2>Намираме се на:</h2>
+        <hr>
+        <p>София, ул. Гео Милев 37, вх.Б</p>
+        <br>
+        <h2>Контакт</h2>
+        <hr>
+        <p>0888 68 54 16</p>
+        <p>d.kalcheva@dir.bg</p>
+      </div>
+    </div>
+
+  </div>
 </body>
 </html>
