Finish rough mobile version

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Company</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
   <div class="container">
 
     <nav>
@@ -13,7 +17,19 @@
     </nav>
 
     <div class="img-container">
-      <img src="./img/h02.jpg" alt="">
+      <h1>Profin&ampTrade</h1>
+
+        <div class="heading">
+
+          <div class="heading-text">
+            <h3>Абонаментни счетоводни услуги</h3>
+            <!-- <p>пълен спектър обслужване</p> -->
+            <img class="arrow" src="./img/arrow.png" alt="">
+          </div>
+
+        </div>
+
+      <img class="header-image" src="./img/h02.jpg" alt="">
     </div>
 
     <div class="about">
@@ -21,24 +37,27 @@
       <div class="box-container">
 
         <div class="info-box">
-          <img src="./img/m01.jpg" alt="">
+          <img src="./img/subscription.jpg" alt="">
           <p class="description">
-            Обработка на годишни заплати, данъчни
+            Абонаментни счетоводни услуги
           </p>
+          <p class="learn-more">Научи повече</p>
         </div>
 
         <div class="info-box">
-          <img src="./img/m01.jpg" alt="">
+          <img src="./img/people.jpg" alt="">
           <p class="description">
-            представителство по системата интрастат; годишно приключване, съставяне на годишни отчети и годишни данъчни декларации;
+            Услуги, свързани с нает персонал
           </p>
+          <p class="learn-more">Научи повече</p>
         </div>
 
         <div class="info-box">
-          <img src="./img/m01.jpg" alt="">
+          <img src="./img/consulting.jpg" alt="">
           <p class="description">
-            регистрации и пререгистрации на фирми, публикуване на годишни финансови отчети; административни услуги.
+            Консултантски услуги
           </p>
+          <p class="learn-more">Научи повече</p>
         </div>
 
       </div>
@@ -51,18 +70,31 @@
       <div class="map">
         <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="600" height="440" src="https://maps.google.com/maps?hl=en&q=гео милев 37&ie=UTF8&t=m&z=13&iwloc=B&output=embed"><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="http://googlemapsgenerator.com/">Google maps generator</a></small></div><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="https:/www.googlemapsgenerator.com/">generate Google Maps</a></small></div></iframe>
       </div>
+
       <div class="address">
-        <h2>Намираме се на:</h2>
-        <hr>
-        <p>София, ул. Гео Милев 37, вх.Б</p>
-        <br>
-        <h2>Контакт</h2>
-        <hr>
-        <p>0888 68 54 16</p>
-        <p>d.kalcheva@dir.bg</p>
+
+        <span class="col-left">
+          <h2>Намираме се на:</h2>
+          <hr>
+          <p>София, ул. Гео Милев 37, вх.Б</p>
+          <br>
+        </span>
+
+        <span class="col-right">
+          <h2>Контакт</h2>
+          <hr>
+          <p>+359 888 68 54 16</p>
+          <p>d.kalcheva@dir.bg</p>
+        </span>
+        
       </div>
     </div>
 
   </div>
+
 </body>
+  <script>
+    window.scrollBy(100, 300000)
+    //window.scrollBy(100, 300)
+  </script>
 </html>
