Redesign site header

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -13,23 +13,35 @@
   <div class="container">
 
     <nav>
-      <h1>Profin&ampTrade</h1>
+
+      <div class="logo">
+        <h1>Profin&ampTrade</h1>
+      </div>
+
+      <div class="menu">
+        <a href="#">Начало</a>
+        <a href="#">Въпроси</a>
+        <a href="#">За нас</a>
+        <a href="#">Контакт</a>
+      </div>
+
     </nav>
 
     <div class="img-container">
-      <h1>Profin&ampTrade</h1>
+      <!-- <h1>Profin&ampTrade</h1> -->
 
         <div class="heading">
 
           <div class="heading-text">
-            <h3>Абонаментни счетоводни услуги</h3>
+            <h3>Счетоводни услуги</h3>
+            <p>за модерни, бързоразвиващи се, технологични фирми</p>
             <!-- <p>пълен спектър обслужване</p> -->
             <img class="arrow" src="./img/arrow.png" alt="">
           </div>
 
         </div>
 
-      <img class="header-image" src="./img/h02.jpg" alt="">
+      <img class="header-image" src="./img/head01.jpg" alt="">
     </div>
 
     <div class="about">
@@ -86,7 +98,7 @@
           <p>+359 888 68 54 16</p>
           <p>d.kalcheva@dir.bg</p>
         </span>
-        
+
       </div>
     </div>
 
