Redesign site footer

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -76,8 +76,16 @@
 
     </div>
 
-    <h2 class="get-in-touch">Свържете се с нас</h2>
-    <hr>
+  <hr class="git">
+    <div class="get-in-touch">
+
+      <h2>Свържете се с нас</h2>
+      <p>за безплатна консултация или въпроси</p>
+
+    </div>
+
+  <hr class="git">
+
     <div class="contact">
       <div class="map">
         <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="600" height="440" src="https://maps.google.com/maps?hl=en&q=гео милев 37&ie=UTF8&t=m&z=13&iwloc=B&output=embed"><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="http://googlemapsgenerator.com/">Google maps generator</a></small></div><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="https:/www.googlemapsgenerator.com/">generate Google Maps</a></small></div></iframe>
