Finish homepage mobile version and start hamburger menu design

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -19,7 +19,9 @@
         <h1>Profin&ampTrade</h1>
       </div>
 
-      <div class="menu">
+
+      <div class="menu hamburger">
+        <img class="hamburger-icon" src="./img/hamburger.png" alt="">
         <a href="#">Начало</a>
         <a href="#">Въпроси</a>
         <a href="#">За нас</a>
@@ -88,27 +90,29 @@
   <hr class="git">
 
     <div class="contact">
+
       <div class="map">
         <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="600" height="440" src="https://maps.google.com/maps?hl=en&q=гео милев 37&ie=UTF8&t=m&z=13&iwloc=B&output=embed"><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="http://googlemapsgenerator.com/">Google maps generator</a></small></div><div><small><a href="http://embedgooglemaps.com">									embed google map							</a></small></div><div><small><a href="https:/www.googlemapsgenerator.com/">generate Google Maps</a></small></div></iframe>
       </div>
 
       <div class="address">
 
-        <span class="col-left">
+        <div class="col-left">
           <h2>Намираме се на:</h2>
-          <hr>
+          <hr class="git">
           <p>София, ул. Гео Милев 37, вх.Б</p>
           <br>
-        </span>
+        </div>
 
-        <span class="col-right">
+        <div class="col-right">
           <h2>Контакт</h2>
-          <hr>
+          <hr class="git">
           <p>+359 888 68 54 16</p>
           <p>d.kalcheva@dir.bg</p>
-        </span>
+        </div>
 
       </div>
+
     </div>
 
   </div>
