Add basic table styles

--- a/company-website/index.html
+++ b/company-website/index.html
@@ -23,6 +23,7 @@
       <div class="menu hamburger">
         <img class="hamburger-icon" src="./img/hamburger.png" alt="">
         <a href="#">Начало</a>
+        <a href="./services.html">Услуги</a>
         <a href="#">Въпроси</a>
         <a href="#">За нас</a>
         <a href="#">Контакт</a>
