Add top margin to first table element to account for navbar

--- a/company-website/services.html
+++ b/company-website/services.html
@@ -13,6 +13,24 @@
 
   <div class="container">
 
+    <nav>
+
+      <div class="logo">
+        <h1>Profin&ampTrade</h1>
+      </div>
+
+
+      <div class="menu hamburger">
+        <img class="hamburger-icon" src="./img/hamburger.png" alt="">
+        <a href="./index.html">Начало</a>
+        <a href="./services.html">Услуги</a>
+        <a href="#">Въпроси</a>
+        <a href="#">За нас</a>
+        <a href="#">Контакт</a>
+      </div>
+
+    </nav>
+
     <table>
       <thead>
         <th>Абонаментно счетоводно обслужване</th>
