--- a/company-website/services.html
+++ b/company-website/services.html
@@ -20,18 +20,19 @@
       </div>
 
 
+      <img class="hamburger-icon" src="./img/whamb.png" alt="">
+
       <div class="menu hamburger">
-        <img class="hamburger-icon" src="./img/hamburger.png" alt="">
         <a href="./index.html">Начало</a>
         <a href="./services.html">Услуги</a>
-        <a href="#">Въпроси</a>
-        <a href="#">За нас</a>
+        <a href="./prices.html">Цени</a>
+        <a href="./blog.html">Въпроси</a>
         <a href="#">Контакт</a>
       </div>
 
     </nav>
 
-    <table>
+    <table id="subscription">
       <thead>
         <th>Абонаментно счетоводно обслужване</th>
       </thead>
@@ -47,21 +48,49 @@
           <td>Ежемесечно водене на синтетични и аналитични регистри съгласно НСФОМСП, МСС и ЗС;</td>
         </tr>
         <tr>
-          <td>Ежемесечно водене на синтетични и аналитични регистри съгласно НСФОМСП, МСС и ЗС;</td>
+          <td>Ежемесечно съставяне и подаване в срок на дневници за покупки и продажби и справки декларации по ЗДДС  и системата Интрастат, VIES декларации;</td>
         </tr>
         <tr>
-          <td>Ежемесечно водене на синтетични и аналитични регистри съгласно НСФОМСП, МСС и ЗС;</td>
+          <td>Издаване на фактури от името на клиента (по договаряне);
+Електронно банкиране (по договаряне);</td>
         </tr>
         <tr>
-          <td>Ежемесечно водене на синтетични и аналитични регистри съгласно НСФОМСП, МСС и ЗС;</td>
+          <td>Подготовка на документи за регистрация на фирми по ЗДДС и регистрирането им;</td>
         </tr>
         <tr>
-          <td>Ежемесечно водене на синтетични и аналитични регистри съгласно НСФОМСП, МСС и ЗС;</td>
+          <td>Изготвяне на различни счетоводни справки за нуждите на управлението;</td>
+        </tr>
+        <tr>
+          <td>Съставяне на счетоводен амортизационен план;</td>
+        </tr>
+        <tr>
+          <td>Съставяне на данъчен амортизационен план, съгласно критериите на ЗКПО;</td>
+        </tr>
+        <tr>
+          <td>Аналитично отчитане на матриалните запаси по избран от клиента метод. Съставяне на инвентаризационни описи към всеки един момент. Справка за движението на активите;</td>
+        </tr>
+        <tr>
+          <td>Изготвяне на различни видове справки за активите и пасивите на предприятието;</td>
+        </tr>
+        <tr>
+          <td>Изготвяне на счетоводни справки за  вземания и задължения към трети лица;</td>
+        </tr>
+        <tr>
+          <td>Годишно счетоводно приключване, изготвяне на ГФО - Баланс, ОПР, Отчет за паричния поток, Отчет за собствения капитал и всички приложения съгласно НСФОМСП и МСС;</td>
+        </tr>
+        <tr>
+          <td>Изготвяне и подаване на изискуемите справкии отчети към БНБ и НСИ;</td>
+        </tr>
+        <tr>
+          <td>Изготвяне и подаване на декларации по ЗКПО;</td>
+        </tr>
+        <tr>
+          <td>Текущи консултации.</td>
         </tr>
       </tbody>
     </table>
 
-    <table>
+    <table id="employees">
       <thead>
         <th>ТРЗ Услуги</th>
       </thead>
@@ -88,10 +117,62 @@
         <tr>
           <td>Издаване на служебни бележки, удостоверения и др</td>
         </tr>
+        <tr>
+          <td>Попълване на платежни документи за осигурителни, здравни вноски, данъци и др.</td>
+        </tr>
+        <tr>
+          <td>Изготвяне на ведомости за заплати;</td>
+        </tr>
+        <tr>
+          <td>Оформяне на трудови книжки на персонала и заверка на трудов стаж;</td>
+        </tr>
+        <tr>
+          <td>Своевремено подаване на информация за осигурените лица в НАП по електронен път.</td>
+        </tr>
       </tbody>
     </table>
 
-  </div>
 
+    <table id="other">
+      <thead>
+        <th>Други услуги</th>
+      </thead>
+      <tr>
+        <td>Вътрешен одит</td>
+      </tr>
+      <tr>
+        <td>Консултации свързани с прилагането на нормативни актове, такива като  – ЗДДС, ЗКПО, ЗМДТ, ЗДДФЛ, ЗАДС, ДОПК;</td>
+      </tr>
+      <tr>
+        <td>Представителство и защита при ревизии и проверки от Националната агенция по приходите, Агенция митници, Национален осигурителен институт;</td>
+      </tr>
+      <tr>
+        <td>Навременна информация за промените в данъното законодателство и други нормативни актове, пряко свързани с дейността на клиента.</td>
+      </tr>
+    </table>
+  </div>
+  <script>
+    var menu = document.getElementsByClassName('hamburger')[0],
+      icon = document.getElementsByClassName('hamburger-icon')[0];
+
+    icon.onclick = function(e) {
+      var isOpen = menu.offsetHeight > 10 ? true : false;
+
+      // Get the menu height and make it the same as the img container
+      if(isOpen) {
+        // Change icon
+        icon.src = './img/whamb.png'
+        menu.style.display = "none";
+      }
+      else {
+        // Change icon
+        icon.src = './img/close.png'
+        menu.style.height = 400 + "px";
+        menu.style.display = "inline-block";
+      }
+    }
+
+    delete menu, icon;
+  </script>
 </body>
 </html>
